# FLSpp

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  build_extension.py  pyproject.toml
.github/workflows/: gitlab.yml  mypy-flake-test.yml  publish.yml
datasets/: pr91.txt
flspp/: __init__.py  _core.cpp  additional_vector_stuff.h  clustering.cpp  clustering.h  clustering_algorithm.cpp  clustering_algorithm.h  core.py  makros.cpp  makros.h  random_generator.cpp  random_generator.h
flspp/cpp/: additional_vector_stuff.h  clustering.cpp  clustering.h  clustering_algorithm.cpp  clustering_algorithm.h  makros.cpp  random_generator.h
tests/: test.py
